[gd_scene load_steps=17 format=2]

[ext_resource path="res://meshes/meshes0.meshlib" type="MeshLibrary" id=1]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://solo_env.tres" type="Environment" id=3]
[ext_resource path="res://prefabs/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Simple.ttf" type="DynamicFontData" id=5]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 200, 200 )

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
albedo_color = Color( 0.129412, 0.517647, 0.827451, 0.784314 )

[sub_resource type="CapsuleMesh" id=3]

[sub_resource type="DynamicFont" id=4]
size = 152
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.8, 0.8, 0.8, 0.0313726 )

[sub_resource type="Shader" id=12]
code = "shader_type canvas_item;
uniform float factor = 0.5;
uniform float aspect_ratio = 1.7;
uniform vec4 fade_color:hint_color;

void fragment(){
	vec2 uv_mod = UV;
	uv_mod.x = mix(0.5, uv_mod.x, aspect_ratio);
	vec4 color;
	float d = length(uv_mod - 0.5);
	if(d < factor) color = vec4(0.);
	else color = fade_color;
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 12 )
shader_param/factor = 1.0
shader_param/aspect_ratio = 1.7
shader_param/fade_color = null

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/factor")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "fromBlack"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/factor")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "toBlack"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/factor")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}

[node name="Menu" type="Spatial"]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.94486, 2.15536, 6.99069 )

[node name="GridMap" type="GridMap" parent="." groups=["wall"]]
mesh_library = ExtResource( 1 )
cell_scale = 0.55
data = {
"cells": PoolIntArray( 1, 1, 2, 2, 1, 2, 3, 1, 2, 1, 2, 2, 3, 2, 2, 4, 2, 1, 1, 3, 2, 2, 3, 2, 3, 3, 2, 4, 3, 2, 5, 3, 2, 2, 4, 0, 3, 4, 2, 5, 4, 2, 3, 5, 2, 4, 5, 2, 5, 5, 2 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="Water" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Cam" type="Spatial" parent="."]
transform = Transform( 0.699401, 0, -0.714729, 0, 1, 0, 0.714729, 0, 0.699401, 7.07123, 0.913136, 7.0025 )

[node name="MeshInstance" type="MeshInstance" parent="Cam"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
visible = false
mesh = SubResource( 3 )

[node name="Camera" type="Camera" parent="Cam"]
transform = Transform( -1, 1.0677e-07, -1.0677e-07, 0, 0.707107, 0.707107, 1.50996e-07, 0.707107, -0.707107, 0, 13, -10 )
environment = ExtResource( 3 )
projection = 1
size = 20.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.883042, -0.468582, -0.0258506, -0.22369, 0.37184, 0.900943, -0.412553, 0.801353, -0.433167, 0, 0, 0 )
shadow_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_right = 1.0
margin_top = 15.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 4 )
text = "Lapin"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_bottom = 1.0
margin_left = -3.0
margin_right = 399.0

[node name="Control" type="Control" parent="CanvasLayer/VBoxContainer"]
margin_right = 402.0
margin_bottom = 316.0
size_flags_vertical = 3

[node name="Button_new" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 320.0
margin_right = 402.0
margin_bottom = 404.0
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
text = "NEW"

[node name="Button_resume" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 408.0
margin_right = 402.0
margin_bottom = 492.0
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
text = "Resume"

[node name="Button_quit" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 496.0
margin_right = 402.0
margin_bottom = 580.0
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
text = "Quit"

[node name="Control2" type="Control" parent="CanvasLayer/VBoxContainer"]
margin_top = 584.0
margin_right = 402.0
margin_bottom = 900.0
size_flags_vertical = 3

[node name="Fade" type="ColorRect" parent="CanvasLayer"]
material = SubResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 1, 1, 0 )

[node name="AnimationScreen" type="AnimationPlayer" parent="CanvasLayer/Fade"]
anims/RESET = SubResource( 9 )
anims/fromBlack = SubResource( 10 )
anims/toBlack = SubResource( 11 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Button_new" to="." method="_on_Button_new_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Button_resume" to="." method="_on_Button_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Button_quit" to="." method="_on_Button_quit_pressed"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
